<resources>
    <string name="app_name">Advanced Alarm</string>
    <string name="mainmenu_newalarm">Make New Alarm</string>
    <string name="all_settings">Settings</string>
    <string name="editalarm_cancel">Cancel</string>
    <string name="editalarm_delete">Delete</string>
    <string name="editalarm_finish">Finish</string>
    <string name="editalarm_dateindicator">Date</string>
    <string name="editalarm_normalimportance">Normal</string>
    <string name="editalarm_highimportance">High</string>
    <string name="AM">AM</string>
    <string name="PM">PM</string>
    <string name="sharedpreferences_key">com.example.advancedalerts.afneo234m</string>
</resources>
