<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditAlarmActivity">

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_hour"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView_editalarm_timeindicator"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker_editalarm_month" />

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_minute"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_editalarm_hour"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker_editalarm_day" />

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_daypart"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_editalarm_minute"
        app:layout_constraintTop_toBottomOf="@+id/numberPicker_editalarm_year" />

    <TextView
        android:id="@+id/textView_editalarm_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/editalarm_cancel"
        app:layout_constraintEnd_toStartOf="@+id/textView_editalarm_delete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_editalarm_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/editalarm_delete"
        app:layout_constraintEnd_toStartOf="@+id/textView_editalarm_finish"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_editalarm_cancel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_editalarm_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/editalarm_finish"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView_editalarm_delete"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_month"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@+id/textView_editalarm_dateindicator"
        app:layout_constraintTop_toBottomOf="@+id/editText_editalarm_name" />

    <TextView
        android:id="@+id/textView_editalarm_dateindicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/editalarm_dateindicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_editalarm_name" />

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_year"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_editalarm_day"
        app:layout_constraintTop_toBottomOf="@+id/editText_editalarm_name" />

    <NumberPicker
        android:id="@+id/numberPicker_editalarm_day"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        app:layout_constraintStart_toEndOf="@+id/numberPicker_editalarm_month"
        app:layout_constraintTop_toBottomOf="@+id/editText_editalarm_name" />

    <TextView
        android:id="@+id/textView_editalarm_timeindicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="90dp"
        android:text="Time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_dateindicator" />

    <TextView
        android:id="@+id/textView_editalarm_importanceindicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="Importance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_timeindicator" />

    <TextView
        android:id="@+id/textView_editalarm_importance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:text="@string/editalarm_normalimportance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView_editalarm_importanceindicator"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_timeindicator" />

    <TextView
        android:id="@+id/textView_editalarm_shortdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Short Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_editalarm_editdescription" />

    <Button
        android:id="@+id/button_editalarm_editdescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Edit Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_importanceindicator" />

    <EditText
        android:id="@+id/editText_editalarm_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="Alarm Name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_cancel" />

    <EditText
        android:id="@+id/editText_editalarm_shortdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Short Description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editalarm_shortdescription" />

</android.support.constraint.ConstraintLayout>